# zephyr

./: NOTICE.md  README.md  build_matrix.json  west.yml
.github/workflows/: build.yml
boards/common/: nxp_s32pedbg.board.cmake  pedbg.board.cmake
boards/nxp/s32k148_evb/: Kconfig.s32k148_evb  board.cmake  s32k148_evb.dts  s32k148_evb.yaml
boards/nxp/s32k148_evb/doc/: index.rst
boards/nxp/s32k148_evk/: Kconfig.defconfig  Kconfig.s32k148_evk  board.cmake  board.yml  nxp_s32k148.dtsi  s32k148_evk-pinctrl.dtsi  s32k148_evk.dts  s32k148_evk.yaml
boards/shields/nxp_adtja1101/: Kconfig.defconfig  nxp_adtja1101.overlay
drivers/ethernet/phy/: CMakeLists.txt  Kconfig  phy_tja11xx.c
dts/arm/nxp/: nxp_s32k148.dtsi  nxp_s32k1xx.dtsi
libs/: CMakeLists.txt
libs/asyncZephyr/: CMakeLists.txt
libs/asyncZephyr/include/async/: FutureSupport.h  Hook.h  Lock.h  ModifiableLock.h  StaticContextHook.h  StaticRunnable.h  TaskContext.h  Types.h  ZephyrAdapter.h
libs/asyncZephyr/src/async/: Async.cpp  FutureSupport.cpp  Hook.cpp  Types.cpp
libs/bspZephyr/: CMakeLists.txt
libs/bspZephyr/include/bsp/: SystemTime.h
libs/bspZephyr/include/bsp/timer/: SystemTimer.h
libs/bspZephyr/include/can/transceiver/: ZephyrCanTransceiver.h
libs/bspZephyr/include/interrupts/: SuspendResumeAllInterruptsLock.h  SuspendResumeAllInterruptsScopedLock.h
libs/bspZephyr/src/: Stdio.cpp  SystemTimer.cpp  ZephyrCanTransceiver.cpp
libs/zephyrEthAdapter/: CMakeLists.txt
libs/zephyrEthAdapter/include/zephyrEthAdapter/tcp/: ZephyrServerSocket.h  ZephyrSocket.h  ZephyrTcpWrapper.h
libs/zephyrEthAdapter/include/zephyrEthAdapter/udp/: UdpEchoServer.h  ZephyrDatagramSocket.h
libs/zephyrEthAdapter/include/zephyrEthAdapter/utils/: EthHelper.h
libs/zephyrEthAdapter/src/zephyrEthAdapter/tcp/: ZephyrServerSocket.cpp  ZephyrSocket.cpp  ZephyrTcpWrapper.c
libs/zephyrEthAdapter/src/zephyrEthAdapter/udp/: UdpEchoServer.cpp  ZephyrDatagramSocket.cpp
samples/demo_app/: CMakeLists.txt  README.md  echo_test_tcp.py  echo_test_udp.py  prj.conf
samples/demo_app/boards/: native_sim.conf  native_sim.overlay  native_sim_64.conf  native_sim_64.overlay  nucleo_g474re.overlay  nucleo_h755zi_q_stm32h755xx_m7.conf  nucleo_h755zi_q_stm32h755xx_m7.overlay  rpi_pico.conf  rpi_pico.overlay  s32k148_evb.overlay  s32k148_evb_network.conf  ucans32k1sic.overlay
samples/demo_app/include/console/: console.h
samples/demo_app/include/logger/: logger.h
samples/demo_app/include/systems/: CanSystem.h  DemoSystem.h  DoCanSystem.h  RuntimeSystem.h  SysAdminSystem.h  TransportSystem.h  UdsSystem.h
samples/demo_app/include/transport/: ITransportSystem.h
samples/demo_app/openbswConfig/: CMakeLists.txt
samples/demo_app/openbswConfig/asyncBinding/: CMakeLists.txt
samples/demo_app/openbswConfig/asyncBinding/include/async/: AsyncBinding.h
samples/demo_app/openbswConfig/asyncCoreConfiguration/: CMakeLists.txt
samples/demo_app/openbswConfig/asyncCoreConfiguration/include/async/: Config.h
samples/demo_app/openbswConfig/configuration/: CMakeLists.txt
samples/demo_app/openbswConfig/configuration/common/src/busid/: BusId.cpp
samples/demo_app/openbswConfig/configuration/include/app/: appConfig.h
samples/demo_app/openbswConfig/configuration/include/busid/: BusId.h
samples/demo_app/openbswConfig/configuration/include/systems/: ICanSystem.h
samples/demo_app/openbswConfig/lifecycleSupport/: CMakeLists.txt
samples/demo_app/openbswConfig/lifecycleSupport/include/lifecycle/console/: LifecycleControlCommand.h  StatisticsCommand.h
samples/demo_app/openbswConfig/lifecycleSupport/src/lifecycle/console/: LifecycleControlCommand.cpp  StatisticsCommand.cpp
samples/demo_app/openbswConfig/transportConfiguration/: CMakeLists.txt
samples/demo_app/openbswConfig/transportConfiguration/include/transport/: TransportConfiguration.h
samples/demo_app/openbswConfig/udsConfiguration/: CMakeLists.txt
samples/demo_app/openbswConfig/udsConfiguration/include/uds/: DummySessionPersistence.h  UdsConfig.h  UdsLifecycleConnector.h
samples/demo_app/openbswConfig/udsConfiguration/include/uds/session/: DiagSession.h
samples/demo_app/src/: TraceHooks.cpp  main.cpp
samples/demo_app/src/console/: console.cpp
samples/demo_app/src/logger/: logger.cpp
samples/demo_app/src/systems/: CanSystem.cpp  DemoSystem.cpp  DoCanSystem.cpp  RuntimeSystem.cpp  SysAdminSystem.cpp  TransportSystem.cpp  UdsSystem.cpp
samples/demo_app/src/uds/: DiagSession.cpp  ReadIdentifierPot.cpp
samples/drivers/adc/adc_dt/: sample.yaml
samples/drivers/adc/adc_sequence/: sample.yaml
samples/hello_world/: CMakeLists.txt  README.md  prj.conf
samples/hello_world/src/: main.cpp
scripts/west_commands/runners/: __init__.py  nxp_pedbg.py  nxp_s32pedbg.py  pedbg.py
scripts/west_commands/tests/: test_imports.py  test_nxp_pedbg.py
